# app-venture

./: .env  .env.demo  .env.development  .env.example  .env.production  .eslintrc.cjs  .gitignore  AGENTS.md  CHANGELOG.md  DEMO.md  HELP_TELAS_ERP.md  Makefile  README.md  RELEASES.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release-desktop.yml
scripts/: audit-api-route-coverage.mjs  changelog-notes.mjs  release.sh  set-release-version.mjs  test-versioning.mjs  validate-backend-alignment.mjs  validate-no-registered-mocks.mjs  verify-package-json.mjs  visual-smoke.mjs
scripts/e2e/: fiscal-financeiro.mjs
src/: main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/hooks/: useReportExport.ts
src/routes/: AppRouter.tsx
src/services/: ItemStructureService.ts  accountingService.ts  allocationsService.ts  apiError.ts  apsService.ts  assistenciaService.ts  auditLogService.ts  authService.ts  averageServiceConsumption.ts  bomHeaderService.ts  chamadosService.ts  cidadeUfService.ts  clienteService.ts  commercialPolicyService.ts  configuratorCfgService.ts  configuratorService.ts  consumerServiceService.ts  contratosService.ts  costCenterService.ts  crpService.ts  custoService.ts  customerService.ts  cuttingPlanService.ts  deliveryPromiseParamsService.ts  deliveryPromiseService.ts  deliveryRescheduleService.ts  demandaService.ts  drawingsService.ts  employeeService.ts  engenhariaService.ts  enterpriseService.ts  (+75 more)
(+189 files in other folders)
